@@ -1,6 +1,7 @@
 How To Prepare Next Version Release:
 
 - update version in project properties of all (changed) projects
+- update xxm.pas function XxmVersion
 - update gecko/setup/xxmGecko*/install.rdf's <em:version>
 - (optionally check <em:maxVersion> https://addons.mozilla.org/en-US/firefox/pages/appversions/ )
 - update http://xxm.sf.net/ with docs/*.html
